Fix: Login Screen Text Alignment

--- a/sass/partials/_shame.scss
+++ b/sass/partials/_shame.scss
@@ -3988,6 +3988,7 @@ html {
 
   margin-bottom: 10px;
   margin-top: calc(50vh - 200px);
+  text-align: center;
 }
 
 .sign-in-up-heading {
@@ -3995,6 +3996,7 @@ html {
 
   color: #2a1e3f;
   margin-bottom: 31px;
+  text-align: center;
 }
 
 .sign-in-up-text {
